<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="none"
        android:id="@+id/screens">
        <item android:id="@+id/nav_subs"
            android:title="@string/subreddits" />

        <item android:id="@+id/nav_favorites"
            android:title="@string/favorites" />

        <item android:id="@+id/nav_back"
            android:title="@string/back_to_selected_subs" />

    </group>
    <group
        android:focusable="false"
        android:checkableBehavior="none"
        android:id="@+id/settings"
        >
        <item
            android:id="@+id/nsfw_toggle"
            android:title="@string/show_nsfw"
            app:actionLayout="@layout/switch_item" />
        <item
            android:id="@+id/fullscreen_toggle"
            android:title="@string/fullscreen"
            app:actionLayout="@layout/switch_item" />
        <item
            android:id="@+id/title_toggle"
            android:title="@string/show_titles"
            app:actionLayout="@layout/switch_item" />
        <item android:id="@+id/columns"
            android:title="@string/columns"/>
    </group>
    <group
        android:checkableBehavior="none"
        android:id="@+id/documentation">
        <item android:id="@+id/nav_help"
            android:title="@string/help"/>
        <item android:id="@+id/nav_about"
            android:title="@string/about"/>
    </group>
</menu>